# grout

./: meson.build  meson_options.txt
.github/workflows/: check.yml  codex_iliad.yml
api/: capture_ring_test.c  gr_api.h  gr_api_client_impl.h  gr_capture_ring.h  meson.build
frr/: if_grout.c
main/: api.c  gr_module.h
modules/infra/api/: affinity.c  capture.c  gr_infra.h  meson.build
modules/infra/cli/: affinity.c  capture.c  meson.build  port.c
modules/infra/control/: capture.c  gr_capture.h  graph.c  port.c  worker.c  worker_test.c
modules/infra/datapath/: bond_output.c  gr_dp_capture.h  gr_rxtx.h  iface_input.c  iface_output.c  port_output.c  port_rx.c  port_tx.c  xconnect.c  xvrf.c
modules/ipip/: datapath_in.c  datapath_out.c
pcap/: meson.build  pcap-grout.c
smoke/: capture_test.sh
subprojects/: libpcap.wrap
